--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -38,8 +38,8 @@ jobs:
           # plugin_discussions: yes
           # plugin_discussions_categories: no
           # plugin_support: yes
-          plugin_followup: yes
-          plugin_followup_sections: repositories, user
+          # plugin_followup: yes
+          # plugin_followup_sections: repositories, user
           # plugin_followup_indepth: yes
           # plugin_gists: yes
           # plugin_isocalendar: yes
@@ -56,7 +56,7 @@ jobs:
           # plugin_languages_details: lines, bytes-size, percentage
           # plugin_languages_sections: most-used, recently-used
           # plugin_languages_threshold: 1%
-          plugin_lines: yes
+          # plugin_lines: yes
           # plugin_notable: yes
           # plugin_notable_from: organization
           # plugin_people: yes
