--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -25,7 +25,7 @@ jobs:
 
           # Options
           user: jphong1111
-          template: Repository
+          template: repository
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Rome
           # plugin_activity: yes
